# routes/index.js
@@ -13,15 +13,4 @@ router.use('/products', require('./products'));
 
 router.use('/deliveries', require('./delivery'));
 
-router.get('/login', passport.authenticate('github'), (req, res) => {});
-
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err) {
-        if(err) {
-            return next(err);
-        }
-        res.redirect('/');
-    });
-});
-
 module.exports = router;
